# WordCounter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
WordCounter/: .gitignore  CMakeLists.txt  QtWindow.cpp  QtWindow.h  QtWindow.qrc  QtWindow.ui  await.h  constants.h  main.cpp  pch.h  text.cpp  text.h  timing.cpp  timing.h  types.cpp  types.h  wordcounter.cpp  wordcounter.h
libasync/: CMakeLists.txt  await.h
libtext/: CMakeLists.txt  text.cpp
libtiming/: CMakeLists.txt
libwordcounter/: CMakeLists.txt  wordcounter.cpp  wordcounter.h
